--- a/Lecture8/CA.ipynb
+++ b/Lecture8/CA.ipynb
@@ -35,7 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "id": "3f5ccfe2-f47d-41db-993f-f2aa9047bcfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ZZ(17).digits(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "76493d8e-cae3-4651-9f9c-a8008805ce57",
    "metadata": {},
    "outputs": [],
@@ -246,8 +267,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "702759bf-8aaa-44d7-aedc-0958807b6072",
+   "metadata": {},
+   "source": [
+    "y = a_0 + a_1 * x + a_2 * x^2 + ... \n",
+    "\n",
+    "y (mod x - 1) = a_0 + a_1 + ... + a_n (mod x - 1)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
+   "id": "d9033674-b9e0-4ce3-9348-e3486208a7ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1694942657451890777082742546707745765991931571784709719742949858880572955078780854608000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = lcm(list(range(1, 199)))\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "16d9bdaf-f640-45db-8ecd-a96fb6548836",
    "metadata": {},
    "outputs": [
@@ -267,10 +320,17 @@
     "b = lcm(list(range(1, 199)))\n",
     "var('x')\n",
     "F = Zmod(n)[x]\n",
+    "\n",
+    "# p = a + b * K\n",
+    "# a + b * K (mod p * q)\n",
+    "\n",
+    "\n",
     "x0 = F(a + x * b).monic().small_roots(X=2**512 // b, beta=0.4)\n",
     "print(x0)\n",
     "x0 = int(x0[0])\n",
     "print(F(a + x * b)(x=x0))\n",
+    "\n",
+    "# gcd(F(a + x * b)(x=x0), n)\n",
     "\n",
     "p = int(a) + int(x0) * int(b)\n",
     "print(p)\n",
